don't use any --add-opens for modules